<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context="cz.uhk.fim.soucera.geocatcher.caches.Fragments.Fragment_Add_Cache"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name_cache"
                    android:id="@+id/textView_name_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/editText_name_cache"
                    android:textColor="@color/colorWhite"

                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/type_cache"
                    android:id="@+id/textView_type_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_group_type"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trad_cache"
                        android:id="@+id/rb_trad"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multi_cache"
                        android:id="@+id/rb_multi"
                        android:textColor="@color/colorWhite" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mystery_cache"
                        android:id="@+id/rb_mystery"
                        android:textColor="@color/colorWhite" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/size_cache"
                    android:id="@+id/textView_size_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <Spinner
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_cache_size"
                    style="@style/spinner_style"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_width="wrap_content"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/code"
                    android:id="@+id/textView_code_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText_code_cache"
                    android:textColor="@color/colorWhite"
                    android:nextFocusDown="@+id/editText_lat_cache"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp" />
            </LinearLayout>

            <View
                android:id="@+id/viewDivider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lat_cache"
                    android:id="@+id/textView_lat_cache"
                    android:textColor="@color/colorAccentV2"
                    android:layout_width="100dp"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText_lat_cache"
                    android:textColor="@color/colorWhite"
                    android:nextFocusDown="@+id/editText_lon_cache"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:gravity="center">

                <TextView
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lon_cache"
                    android:id="@+id/textView_lon_cache"
                    android:textColor="@color/colorAccentV2"
                    android:layout_width="100dp"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText_lon_cache"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp" />

            </LinearLayout>

            <View
                android:id="@+id/viewDivider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/diff_cache"
                    android:id="@+id/textView_diff_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_cache_diff"
                    style="@style/spinner_style"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/terr_cache"
                    android:id="@+id/textView_terr_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_cache_terrain"
                    style="@style/spinner_style"
                    android:spinnerMode="dropdown"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp" />
            </LinearLayout>

            <View
                android:id="@+id/viewDivider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/help_cache"
                    android:id="@+id/textView_help_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText_help_cache"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/url"
                    android:id="@+id/textView_url_cache"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="6"
                    android:id="@+id/editText_url_cache"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp">

                <TextView
                    android:text="@string/desc"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_desc_cache"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccentV2"
                    android:gravity="right" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editText_desc_cache"
                    android:textColor="@color/colorWhite"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
